[project]
name = "tts-prefix-cache-poc"
version = "0.1.0"
description = "Cached-prefix TTS playback PoC with DTW boundary detection."
requires-python = ">=3.11"
dependencies = [
    "dtw-python>=1.5.3",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_prefix_cache_poc"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "black>=26.5.1",
    "isort>=8.0.1",
    "ruff>=0.15.18",
]
