[project]
name = "tts-prefix-cache"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dtw-python>=1.5.3",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_prefix_cache"]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "test",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "black>=26.5.1",
    "isort>=8.0.1",
    "ruff>=0.15.18",
]
